--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
+		"@types/gradient-string": "^1.1.2",
 		"colorette": "^2.0.16",
 		"discord-api-types": "^0.26.1",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.1",
+		"figlet": "^1.5.2",
+		"gradient-string": "^2.0.1",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
@@ -44,6 +47,7 @@
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/eslint": "^8",
+		"@types/figlet": "^1.5.4",
 		"@types/node": "^17.0.32",
 		"eslint": "^8.15.0",
 		"eslint-config-prettier": "^8.5.0",
