--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"minimist": "^1.2.6"
 	},
 	"dependencies": {
+		"@discordjs/builders": "^0.13.0",
 		"@sapphire/decorators": "^4.3.4",
 		"@sapphire/discord-utilities": "^2.10.3",
 		"@sapphire/discord.js-utilities": "^4.10.0",
