--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
 		"@types/gradient-string": "^1.1.2",
+		"clashofclans.js": "dev",
 		"colorette": "^2.0.16",
 		"discord-api-types": "^0.30.0",
 		"discord.js": "^13.7.0",
