--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
 		"dotenv": "^16.0.1",
 		"figlet": "^1.5.2",
 		"gradient-string": "^2.0.1",
+		"postgres": "^3.1.0",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
+		"@mikro-orm/sql-highlighter": "^1.0.1",
 		"@sapphire/eslint-config": "^4.3.4",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
