--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"imports": {
 		"#root/*": "./dist/*.js",
 		"#lib/*": "./dist/lib/*.js",
+		"#lib/coc": "./dist/lib/coc/index.js",
 		"#utils/*": "./dist/lib/util/*.js"
 	},
 	"scripts": {
@@ -15,7 +16,7 @@
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
 		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
-		"start": "node --enable-source-maps dist/goblin.js",
+		"start": "node --experimental-specifier-resolution=node --enable-source-maps dist/goblin.js",
 		"typecheck": "tsc -b src",
 		"watch": "tsup --watch"
 	},
