--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.13.0",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
+		"@redis/json": "^1.0.3",
 		"@sapphire/decorators": "^4.3.4",
 		"@sapphire/discord-utilities": "^2.10.3",
 		"@sapphire/discord.js-utilities": "^4.11.0",
@@ -45,6 +46,7 @@
 		"figlet": "^1.5.2",
 		"gradient-string": "^2.0.1",
 		"postgres": "^3.1.0",
+		"redis": "^4.1.0",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
