feat(core): implement redis (#5)
* feat(commands):

* feat: initial setup

* chore: remove `@redis/json` dep

* fix: undefined clash client

* chore: use method to check for null

* fix: broken cache

* feat: integrate cache with link/unlink commands

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"figlet": "^1.5.2",
 		"gradient-string": "^2.0.1",
 		"postgres": "^3.1.0",
+		"redis": "^4.1.0",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
