--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"discord.js": "^13.7.0",
 		"dotenv": "^16.0.1",
 		"figlet": "^1.5.2",
+		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.1",
 		"postgres": "^3.1.0",
 		"redis": "^4.1.0",
