--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
 		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
-		"start": "node --experimental-specifier-resolution=node --enable-source-maps dist/goblin.js",
+		"start": "node --enable-source-maps dist/goblin.js",
 		"typecheck": "tsc -b src",
 		"watch": "tsup --watch"
 	},
