--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"@types/eslint": "^8",
 		"@types/figlet": "^1.5.4",
 		"@types/node": "^17.0.35",
+		"@typescript-eslint/eslint-plugin": "^5.25.0",
+		"@typescript-eslint/parser": "^5.25.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
