--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-unicorn": "^42.0.0",
 		"prettier": "^2.6.2",
 		"tsup": "^5.12.8",
 		"typescript": "^4.6.4"
