--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
 		"@sapphire/fetch": "^2.3.1",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-logger": "^2.2.1",
+		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
 		"@types/gradient-string": "^1.1.2",
-		"clashofclans.js": "dev",
+		"clashofclans.js": "2.7.0",
 		"colorette": "^2.0.16",
 		"discord-api-types": "^0.30.0",
 		"discord.js": "^13.7.0",
