--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
 		"@sapphire/fetch": "^2.3.1",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-logger": "^2.2.1",
+		"@sapphire/plugin-scheduled-tasks": "^2.3.3",
 		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
 		"@types/gradient-string": "^1.1.2",
+		"bull": "^4.8.3",
 		"clashofclans.js": "2.7.0",
 		"colorette": "^2.0.16",
 		"discord-api-types": "^0.30.0",
@@ -54,6 +56,7 @@
 		"@sapphire/eslint-config": "^4.3.5",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/bull": "^3.15.8",
 		"@types/eslint": "^8",
 		"@types/figlet": "^1.5.4",
 		"@types/node": "^17.0.35",
