--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
 		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
+		"migrate": "env-cmd -f ./src/.env ley",
 		"release": "cliff-jumper",
 		"release:test": "cliff-jumper --dry-run",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -65,11 +66,13 @@
 		"@types/node": "^17.0.35",
 		"@typescript-eslint/eslint-plugin": "^5.26.0",
 		"@typescript-eslint/parser": "^5.26.0",
+		"env-cmd": "^10.1.0",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-unicorn": "^42.0.0",
+		"ley": "^0.7.1",
 		"prettier": "^2.6.2",
 		"tsup": "^6.0.1",
 		"typescript": "^4.7.2"
