--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["@sapphire", "plugin:unicorn/recommended"],
+	"extends": ["@sapphire", "plugin:unicorn/all"],
 	"plugins": ["prettier", "import"],
 	"rules": {
 		"import/order": [
