--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"gradient-string": "^2.0.1",
 		"postgres": "^3.2.4",
 		"redis": "^4.1.0",
-		"reflect-metadata": "^0.1.13"
+		"reflect-metadata": "^0.1.13",
+		"string-strip-html": "^9.1.12"
 	},
 	"devDependencies": {
 		"@favware/cliff-jumper": "^1.8.3",
