--- a/cliff.toml
+++ b/cliff.toml
@@ -58,7 +58,7 @@ commit_parsers = [
     { body = ".*security", group = "🛡️ Security"},
 ]
 filter_commits = true
-tag_pattern = "@sapphire/fetch@[0-9]*"
+tag_pattern = "v[0-9]*"
 ignore_tags = ""
 topo_order = false
 sort_commits = "newest"
