build: fix cliff config files again

--- a/cliff.toml
+++ b/cliff.toml
@@ -6,15 +6,15 @@ All notable changes to this project will be documented in this file.\n
 """
 body = """
 {% if version %}\
-	# [{{ version | trim_start_matches(pat="v") }}]
-	{% if previous %}\
-		{% if previous.version %}\
-			(https://github.com/r-priyam/goblin/compare/{{ previous.version }}...{{ version }})\
-		{% else %}\
-			(https://github.com/r-priyam/goblin/tree/{{ version }})\
-		{% endif %}\
-	{% endif %} \
-	- ({{ timestamp | date(format="%Y-%m-%d") }})
+    # [{{ version | trim_start_matches(pat="v") }}]\
+    {% if previous %}\
+        {% if previous.version %}\
+            (https://github.com/r-priyam/goblin/compare/{{ previous.version }}...{{ version }})\
+        {% else %}\
+            (https://github.com/r-priyam/goblin/tree/{{ version }})\
+        {% endif %}\
+    {% endif %} \
+    - ({{ timestamp | date(format="%Y-%m-%d") }})
 {% else %}\
     # [unreleased]
 {% endif %}\
