chore: use `@skyra/env-utilities`

--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
 		"@sapphire/time-utilities": "^1.7.5",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.7.0",
+		"@skyra/env-utilities": "^1.0.2",
 		"@types/gradient-string": "^1.1.2",
 		"bull": "^4.8.4",
 		"clashofclans.js": "2.8.0",
 		"colorette": "^2.0.19",
 		"discord-api-types": "^0.33.5",
 		"discord.js": "^13.8.1",
-		"dotenv": "^16.0.1",
 		"figlet": "^1.5.2",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.1",
