chore: update @sapphire/plugin-scheduled-tasks

--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
 		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-logger": "^2.2.3",
-		"@sapphire/plugin-scheduled-tasks": "^2.3.5",
+		"@sapphire/plugin-scheduled-tasks": "^3.0.0",
 		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/time-utilities": "^1.7.5",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.7.0",
 		"@skyra/env-utilities": "^1.0.2",
 		"@types/gradient-string": "^1.1.2",
-		"bull": "^4.8.4",
+		"bullmq": "^1.86.7",
 		"clashofclans.js": "2.8.0",
 		"colorette": "^2.0.19",
 		"discord-api-types": "^0.33.5",
@@ -58,8 +58,8 @@
 		"@sapphire/eslint-config": "^4.3.7",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
-		"@types/bull": "^3.15.8",
 		"@types/figlet": "^1.5.4",
+		"@types/ioredis": "^4.28.10",
 		"@types/node": "^18.0.4",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
