refactor: use `@sapphire/plugin-subcommands`

--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
 		"@sapphire/discord.js-utilities": "^4.12.0",
 		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/framework": "next",
-		"@sapphire/plugin-logger": "^2.2.3",
-		"@sapphire/plugin-scheduled-tasks": "^3.0.0",
+		"@sapphire/plugin-logger": "next",
+		"@sapphire/plugin-scheduled-tasks": "next",
+		"@sapphire/plugin-subcommands": "next",
 		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/time-utilities": "^1.7.5",
 		"@sapphire/type": "^2.2.4",
