refactor: better markdown table

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"figlet": "^1.5.2",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.1",
+		"markdown-table": "^3.0.2",
 		"postgres": "^3.2.4",
 		"redis": "^4.2.0",
 		"reflect-metadata": "^0.1.13",
