chore: enable rulers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 	"editor.useTabStops": true,
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
+	"editor.rulers": [140],
 	"files.eol": "\n",
 	"typescript.tsdk": "node_modules\\typescript\\lib",
 	"search.exclude": {
