--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
 		"**/.git/": true
 	},
 	"editor.codeActionsOnSave": {
+		"source.organizeImports": true,
 		"source.fixAll.eslint": true
 	},
 	"cSpell.words": [
