chore: reorder paths for better auto-imports

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,9 +6,10 @@
 		"baseUrl": ".",
 		"noEmit": true,
 		"paths": {
-			"#root/*": ["*"],
-			"#lib/*": ["lib/*"],
 			"#utils/*": ["lib/util/*"],
+			"#lib/coc": ["lib/coc/index.ts"],
+			"#lib/*": ["lib/*"],
+			"#root/*": ["*"]
 		}
 	},
 	"include": ["."]
