--- a/package.json
+++ b/package.json
@@ -28,18 +28,17 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.16.0",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
-		"@sapphire/decorators": "^4.3.8",
-		"@sapphire/discord.js-utilities": "^4.12.0",
-		"@sapphire/framework": "next",
-		"@sapphire/plugin-logger": "next",
-		"@sapphire/plugin-scheduled-tasks": "next",
-		"@sapphire/plugin-subcommands": "next",
+		"@sapphire/decorators": "^5.0.0",
+		"@sapphire/discord.js-utilities": "^5.0.0",
+		"@sapphire/framework": "3.0.0",
+		"@sapphire/plugin-logger": "3.0.0",
+		"@sapphire/plugin-scheduled-tasks": "4.0.0",
+		"@sapphire/plugin-subcommands": "3.0.0",
 		"@sapphire/stopwatch": "^1.4.1",
-		"@sapphire/time-utilities": "^1.7.5",
+		"@sapphire/time-utilities": "^1.7.6",
 		"@sapphire/type": "^2.2.4",
-		"@sapphire/utilities": "^3.9.1",
+		"@sapphire/utilities": "^3.9.2",
 		"@skyra/env-utilities": "^1.0.2",
-		"@types/gradient-string": "^1.1.2",
 		"bullmq": "^1.89.1",
 		"clashofclans.js": "2.8.0",
 		"colorette": "^2.0.19",
@@ -55,11 +54,12 @@
 		"string-strip-html": "^11.3.0"
 	},
 	"devDependencies": {
-		"@favware/cliff-jumper": "^1.8.6",
-		"@sapphire/eslint-config": "^4.3.7",
-		"@sapphire/prettier-config": "^1.4.3",
+		"@favware/cliff-jumper": "^1.8.7",
+		"@sapphire/eslint-config": "^4.3.8",
+		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/figlet": "^1.5.4",
+		"@types/gradient-string": "^1.1.2",
 		"@types/ioredis": "^4.28.10",
 		"@types/node": "^18.7.8",
 		"@typescript-eslint/eslint-plugin": "^5.33.1",
