--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
+		"@swc/core": "^1.2.241",
 		"@types/figlet": "^1.5.4",
 		"@types/gradient-string": "^1.1.2",
 		"@types/ioredis": "^4.28.10",
