--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
 		"minimist": "^1.2.6"
 	},
 	"dependencies": {
-		"@discordjs/builders": "^0.16.0",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
 		"@sapphire/decorators": "^5.0.0",
-		"@sapphire/discord.js-utilities": "^5.0.0",
-		"@sapphire/framework": "3.0.0",
+		"@sapphire/discord.js-utilities": "pr-434",
+		"@sapphire/framework": "pr-512",
 		"@sapphire/plugin-logger": "3.0.0",
 		"@sapphire/plugin-scheduled-tasks": "4.0.0",
 		"@sapphire/plugin-subcommands": "3.1.1",
@@ -42,7 +41,7 @@
 		"bullmq": "^1.89.2",
 		"clashofclans.js": "2.8.0",
 		"colorette": "^2.0.19",
-		"discord.js": "^14.0.2",
+		"discord.js": "^14.3.0",
 		"figlet": "^1.5.2",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.1",
