chore: initial changes

--- a/package.json
+++ b/package.json
@@ -1,79 +1,29 @@
 {
-	"name": "goblin",
-	"version": "1.4.0",
-	"private": true,
-	"author": "r-priyam",
-	"type": "module",
-	"main": "dist/goblin.js",
-	"imports": {
-		"#root/*": "./dist/*.js",
-		"#lib/*": "./dist/lib/*.js",
-		"#lib/coc": "./dist/lib/coc/index.js",
-		"#utils/*": "./dist/lib/util/*.js"
-	},
-	"scripts": {
-		"build": "tsup",
-		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
-		"lint": "eslint src --ext ts --fix",
-		"release": "cliff-jumper",
-		"release:test": "cliff-jumper --dry-run",
-		"start": "node --enable-source-maps dist/goblin.js",
-		"typecheck": "tsc -b src",
-		"watch": "tsup --watch"
-	},
-	"resolutions": {
-		"minimist": "^1.2.6"
-	},
-	"dependencies": {
-		"@discordjs/builders": "^0.16.0",
-		"@discordjs/rest": "^1.1.0",
-		"@mikro-orm/sql-highlighter": "^1.0.1",
-		"@sapphire/decorators": "^5.0.0",
-		"@sapphire/discord.js-utilities": "^5.0.0",
-		"@sapphire/framework": "3.0.0",
-		"@sapphire/plugin-logger": "3.0.0",
-		"@sapphire/plugin-scheduled-tasks": "4.0.0",
-		"@sapphire/plugin-subcommands": "3.1.1",
-		"@sapphire/stopwatch": "^1.4.1",
-		"@sapphire/time-utilities": "^1.7.6",
-		"@sapphire/type": "^2.2.4",
-		"@sapphire/utilities": "^3.9.2",
-		"@skyra/env-utilities": "^1.0.2",
-		"bullmq": "^1.89.2",
-		"clashofclans.js": "2.8.0",
-		"colorette": "^2.0.19",
-		"discord-api-types": "^0.33.5",
-		"discord.js": "^13.10.3",
-		"figlet": "^1.5.2",
-		"fuse.js": "^6.6.2",
-		"gradient-string": "^2.0.1",
-		"markdown-table": "^3.0.2",
-		"postgres": "^3.2.4",
-		"redis": "^4.3.0",
-		"reflect-metadata": "^0.1.13",
-		"string-strip-html": "^11.3.0"
-	},
-	"devDependencies": {
-		"@favware/cliff-jumper": "^1.8.7",
-		"@sapphire/eslint-config": "^4.3.8",
-		"@sapphire/prettier-config": "^1.4.4",
-		"@sapphire/ts-config": "^3.3.4",
-		"@swc/core": "^1.2.242",
-		"@types/figlet": "^1.5.5",
-		"@types/gradient-string": "^1.1.2",
-		"@types/ioredis": "^4.28.10",
-		"@types/node": "^18.7.13",
-		"@typescript-eslint/eslint-plugin": "^5.35.1",
-		"@typescript-eslint/parser": "^5.35.1",
-		"eslint": "^8.22.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-unicorn": "^43.0.2",
-		"prettier": "^2.7.1",
-		"tsup": "^6.2.2",
-		"typescript": "^4.7.4"
-	},
-	"packageManager": "yarn@3.2.2"
+  "name": "@goblin/core",
+  "version": "1.4.0",
+  "private": true,
+  "author": "r-priyam",
+  "type": "module",
+  "imports": {},
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@sapphire/eslint-config": "^4.3.8",
+    "@sapphire/prettier-config": "^1.4.4",
+    "@sapphire/ts-config": "^3.3.4",
+    "@swc/core": "^1.2.244",
+    "@types/node": "^18.7.13",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "prettier": "^2.7.1",
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.2"
+  },
+  "packageManager": "yarn@3.2.2"
 }
