--- a/packages/clashofclans/package.json
+++ b/packages/clashofclans/package.json
@@ -25,6 +25,8 @@
 		"fuse.js": "^6.6.2"
 	},
 	"devDependencies": {
+		"@redis/client": "^1.3.0",
+		"@sapphire/plugin-scheduled-tasks": "^4.0.0",
 		"tsup": "^6.2.2",
 		"typescript": "^4.7.4"
 	},
