--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -5,6 +5,9 @@
 	"keywords": [],
 	"author": "r-priyam <roy_priyam@outlook.com>",
 	"type": "module",
+	"imports": {
+		"#lib/*": "./dist/lib/*.js"
+	},
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
@@ -19,6 +22,7 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.16.0",
 		"@discordjs/rest": "^1.1.0",
+		"@goblin/clashofclans": "workspace:^",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
 		"@sapphire/decorators": "^5.0.0",
 		"@sapphire/discord.js-utilities": "^5.0.0",
@@ -32,7 +36,6 @@
 		"@sapphire/utilities": "^3.9.2",
 		"@skyra/env-utilities": "^1.0.2",
 		"bullmq": "^1.89.2",
-		"clashofclans.js": "2.8.0",
 		"colorette": "^2.0.19",
 		"discord-api-types": "^0.33.5",
 		"discord.js": "^13.10.3",
@@ -44,6 +47,12 @@
 		"redis": "^4.3.0",
 		"reflect-metadata": "^0.1.13",
 		"string-strip-html": "^11.3.0"
+	},
+	"devDependencies": {
+		"@types/figlet": "^1.5.5",
+		"@types/gradient-string": "^1.1.2",
+		"tsup": "^6.2.2",
+		"typescript": "^4.7.4"
 	},
 	"engines": {
 		"node": ">=18.0.0"
