--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "@goblin/core",
-  "version": "1.4.0",
-  "private": true,
-  "author": "r-priyam",
-  "type": "module",
-  "imports": {},
-  "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@sapphire/eslint-config": "^4.3.8",
-    "@sapphire/prettier-config": "^1.4.4",
-    "@sapphire/ts-config": "^3.3.4",
-    "@swc/core": "^1.2.244",
-    "@types/node": "^18.7.13",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unicorn": "^43.0.2",
-    "prettier": "^2.7.1",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2"
-  },
-  "packageManager": "yarn@3.2.2"
+	"name": "@goblin/core",
+	"version": "1.4.0",
+	"private": true,
+	"author": "r-priyam",
+	"type": "module",
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"build": "yarn workspaces foreach --parallel --topological run build",
+		"format": "yarn workspaces foreach --parallel --topological run format",
+		"lint": "yarn workspaces foreach --parallel --topological run lint --fix=false",
+		"typecheck": "yarn workspaces foreach --parallel --topological run typecheck"
+	},
+	"devDependencies": {
+		"@sapphire/eslint-config": "^4.3.8",
+		"@sapphire/prettier-config": "^1.4.4",
+		"@sapphire/ts-config": "^3.3.4",
+		"@swc/core": "^1.2.244",
+		"@types/node": "^18.7.13",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.23.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-unicorn": "^43.0.2",
+		"prettier": "^2.7.1",
+		"tsup": "^6.2.3",
+		"typescript": "^4.7.4"
+	},
+	"packageManager": "yarn@3.2.2"
 }
