--- a/cliff.toml
+++ b/cliff.toml
@@ -6,59 +6,59 @@ All notable changes to this project will be documented in this file.\n
 """
 body = """
 {% if version %}\
-    # [{{ version | trim_start_matches(pat="v") }}]\
-    {% if previous %}\
-        {% if previous.version %}\
-            (https://github.com/r-priyam/goblin/compare/{{ previous.version }}...{{ version }})\
-        {% else %}\
-            (https://github.com/r-priyam/goblin/tree/{{ version }})\
-        {% endif %}\
-    {% endif %} \
-    - ({{ timestamp | date(format="%Y-%m-%d") }})
+	# [{{ version | trim_start_matches(pat="v") }}]\
+	{% if previous %}\
+		{% if previous.version %}\
+			(https://github.com/r-priyam/goblin/compare/{{ previous.version }}...{{ version }})\
+		{% else %}\
+			(https://github.com/r-priyam/goblin/tree/{{ version }})\
+		{% endif %}\
+	{% endif %} \
+	- ({{ timestamp | date(format="%Y-%m-%d") }})
 {% else %}\
-    # [unreleased]
+	# [unreleased]
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
-    ## {{ group | upper_first }}
-    {% for commit in commits %}
+	## {{ group | upper_first }}
+	{% for commit in commits %}
 		- {% if commit.scope %}\
 			**{{commit.scope}}:** \
-		  {% endif %}\
-            {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}](https://github.com/r-priyam/goblin/commit/{{ commit.id }}))\
+		{% endif %}\
+			{{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}](https://github.com/r-priyam/goblin/commit/{{ commit.id }}))\
 		{% if commit.breaking %}\
-			\n\n {% raw %}  {% endraw %} ### 💥 Breaking Changes:\n \
 			{% for breakingChange in commit.footers %}\
-				{% raw %}  {% endraw %} - {{ breakingChange }}\n\
+				\n{% raw %}  {% endraw %}- 💥 **{{ breakingChange.token }}{{ breakingChange.separator }}** {{ breakingChange.value }}\
 			{% endfor %}\
 		{% endif %}\
-    {% endfor %}
+	{% endfor %}
 {% endfor %}\n
 """
 trim = true
 footer = ""
 
 [git]
-conventional_commits = true
-filter_unconventional = true
 commit_parsers = [
-    { message = "^feat", group = "🚀 Features"},
-    { message = "^fix", group = "🐛 Bug Fixes"},
-    { message = "^docs", group = "📝 Documentation"},
-    { message = "^perf", group = "🏃 Performance"},
-    { message = "^refactor", group = "🏠 Refactor"},
-    { message = "^typings", group = "⌨️ Typings"},
-    { message = "^types", group = "⌨️ Typings"},
-    { message = ".*deprecated", body = ".*deprecated", group = "🚨 Deprecation"},
-    { message = "^revert", skip = true},
-    { message = "^style", group = "🪞 Styling"},
-    { message = "^test", group = "🧪 Testing"},
-    { message = "^chore", skip = true},
-    { message = "^ci", skip = true},
-    { message = "^build", skip = true},
-    { body = ".*security", group = "🛡️ Security"},
+  {message = "^feat", group = "🚀 Features"},
+  {message = "^fix", group = "🐛 Bug Fixes"},
+  {message = "^docs", group = "📝 Documentation"},
+  {message = "^perf", group = "🏃 Performance"},
+  {message = "^refactor", group = "🏠 Refactor"},
+  {message = "^typings", group = "⌨️ Typings"},
+  {message = "^types", group = "⌨️ Typings"},
+  {message = ".*deprecated", body = ".*deprecated", group = "🚨 Deprecation"},
+  {message = "^revert", skip = true},
+  {message = "^style", skip = true},
+  {message = "^test", group = "🧪 Testing"},
+  {message = "^chore", skip = true},
+  {message = "^ci", skip = true},
+  {message = "^build", skip = true},
+  {body = ".*security", group = "🛡️ Security"},
 ]
+
+conventional_commits = true
 filter_commits = true
-tag_pattern = "v[0-9]*"
+filter_unconventional = true
 ignore_tags = ""
-topo_order = false
 sort_commits = "newest"
+tag_pattern = "v[0-9]*"
+topo_order = false
