ci: fix docker script

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -24,4 +24,4 @@ jobs:
           cd .docker
           docker-compose stop bot
           docker-compose pull bot
-          docker-compose up -d
+          docker-compose up bot
