ci: add `continuous-deployment` in delivery path

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -8,6 +8,7 @@ on:
       - 'src/**'
       - 'Dockerfile'
       - '.github/workflows/continuous-delivery.yml'
+      - '.github/workflows/continuous-deployment.yml'
   workflow_dispatch:
 
 jobs:
