feat: add script to perform bot image refresh

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -21,7 +21,4 @@ jobs:
         script: |
           cd goblin
           git pull
-          cd .docker
-          docker-compose stop bot
-          docker-compose pull bot
-          docker-compose up bot
+          node scripts/syncDocker.mjs
