fix: I don't have yarn installed on VPS

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -20,5 +20,4 @@ jobs:
         script_stop: true
         script: |
           cd goblin
-          git pull
-          yarn sync-docker
+          npm run sync-docker
