--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"sync-docker": "node scripts/syncDocker.mjs"
 	},
 	"resolutions": {
+		"@sapphire/shapeshift": "^3.6.0",
 		"minimist": "^1.2.6"
 	},
 	"dependencies": {
