--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
 	},
 	"devDependencies": {
 		"@favware/cliff-jumper": "^1.8.7",
-		"@sapphire/eslint-config": "^4.3.8",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
 		"@swc/core": "^1.2.244",
@@ -68,10 +67,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.36.0",
 		"@typescript-eslint/parser": "^5.36.0",
 		"eslint": "^8.23.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-unicorn": "^43.0.2",
+		"eslint-config-neon": "^0.1.23",
 		"prettier": "^2.7.1",
 		"tsup": "^6.2.3",
 		"typescript": "^4.8.2"
