chore: fix typecheck for real this time

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
 		"lib": ["ESNext", "DOM"],
 		"target": "ESNext",
 		"module": "ESNext",
+		"skipLibCheck": true,
 		"importsNotUsedAsValues": "preserve"
 	}
 }
