--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
-		"lint": "eslint src --ext ts --fix",
+		"format": "prettier --write . && eslint src --ext ts --fix",
+		"lint": "prettier --check . && eslint src --ext ts",
 		"release": "cliff-jumper",
 		"release:test": "cliff-jumper --dry-run",
 		"start": "node --enable-source-maps dist/goblin.js",
