--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,5 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
-	"cSpell.words": [
-		"clashofclans"
-	]
+	"cSpell.words": ["clashofclans"]
 }
