--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.16.0",
 		"@discordjs/rest": "^1.1.0",
+		"@sapphire/cron": "^1.0.0",
 		"@sapphire/decorators": "^5.0.0",
 		"@sapphire/discord.js-utilities": "^5.0.0",
 		"@sapphire/framework": "3.1.1",
@@ -36,7 +37,6 @@
 		"@sapphire/plugin-scheduled-tasks": "4.0.0",
 		"@sapphire/plugin-subcommands": "3.2.1",
 		"@sapphire/stopwatch": "^1.4.1",
-		"@sapphire/time-utilities": "^1.7.6",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.9.3",
 		"@skyra/env-utilities": "^1.0.2",
