--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,6 @@
 		"lib": ["ESNext", "DOM"],
 		"target": "ESNext",
 		"module": "ESNext",
-		"skipLibCheck": true,
-		"importsNotUsedAsValues": "preserve"
+		"skipLibCheck": true
 	}
 }
