--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
 		"format": "prettier --write . && eslint src --ext ts --fix",
+		"postinstall": "husky install .github/husky",
 		"lint": "prettier --check . && eslint src --ext ts",
 		"release": "cliff-jumper",
 		"release:test": "cliff-jumper --dry-run",
@@ -22,6 +23,19 @@
 		"sync-docker": "node scripts/syncDocker.mjs",
 		"typecheck": "tsc -b src",
 		"watch": "tsup --watch"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"lint-staged": {
+		"*.{mjs,js,ts}": "eslint --fix --ext mjs,js,ts"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	},
 	"resolutions": {
 		"minimist": "^1.2.6"
@@ -55,6 +69,8 @@
 		"string-strip-html": "^11.6.6"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.1.2",
+		"@commitlint/config-conventional": "^17.1.0",
 		"@favware/cliff-jumper": "^1.8.7",
 		"@sapphire/prettier-config": "^1.4.4",
 		"@sapphire/ts-config": "^3.3.4",
@@ -64,11 +80,18 @@
 		"@types/node": "^18.7.18",
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
+		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.24.0",
 		"eslint-config-neon": "^0.1.33",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
+		"pretty-quick": "^3.1.3",
 		"tsup": "^6.2.3",
 		"typescript": "^4.8.3"
 	},
-	"packageManager": "yarn@3.2.3"
+	"packageManager": "yarn@3.2.3",
+	"engines": {
+		"node": ">=18.0.0"
+	}
 }
