--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "goblin",
 	"version": "1.7.0",
 	"private": true,
+	"license": "MPL-2.0",
 	"author": "r-priyam",
 	"type": "module",
 	"imports": {
