--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
 		"markdown-table": "^3.0.2",
 		"postgres": "^3.2.4",
 		"reflect-metadata": "^0.1.13",
-		"string-strip-html": "^11.6.6"
+		"string-strip-html": "^11.6.6",
+		"undici": "^5.10.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
