refactor: upgrade to clashofclans v3 dev

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 		"@skyra/env-utilities": "^1.0.2",
 		"bufferutil": "^4.0.6",
 		"bullmq": "^2.1.2",
-		"clashofclans.js": "2.8.4",
+		"clashofclans.js": "3.0.0-dev.392ca4c",
 		"colorette": "^2.0.19",
 		"discord-api-types": "^0.33.5",
 		"discord.js": "^13.11.0",
@@ -69,6 +69,7 @@
 		"gradient-string": "^2.0.2",
 		"ioredis": "^5.2.3",
 		"markdown-table": "^3.0.2",
+		"npm": "^8.19.2",
 		"postgres": "^3.2.4",
 		"reflect-metadata": "^0.1.13",
 		"string-strip-html": "^11.6.9",
