--- a/package.json
+++ b/package.json
@@ -45,32 +45,31 @@
 		"minimist": "^1.2.6"
 	},
 	"dependencies": {
-		"@discordjs/builders": "^0.16.0",
 		"@discordjs/rest": "^1.2.0",
 		"@sapphire/cron": "^1.0.0",
-		"@sapphire/decorators": "^5.0.0",
-		"@sapphire/discord.js-utilities": "^5.0.1",
-		"@sapphire/framework": "3.1.1",
+		"@sapphire/decorators": "pr-434",
+		"@sapphire/discord.js-utilities": "pr-434",
+		"@sapphire/framework": "pr-512",
 		"@sapphire/plugin-logger": "3.0.1",
 		"@sapphire/plugin-scheduled-tasks": "5.0.0",
 		"@sapphire/plugin-subcommands": "3.2.1",
 		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/type": "^2.2.4",
-		"@sapphire/utilities": "^3.9.3",
+		"@sapphire/utilities": "pr-434",
 		"@skyra/env-utilities": "^1.0.2",
 		"bufferutil": "^4.0.6",
-		"bullmq": "^2.1.2",
+		"bullmq": "^2.1.3",
 		"clashofclans.js": "3.0.0-dev.392ca4c",
 		"colorette": "^2.0.19",
-		"discord-api-types": "^0.33.5",
-		"discord.js": "^13.11.0",
+		"discord-api-types": "^0.37.4",
+		"discord.js": "^14.3.0",
 		"figlet": "^1.5.2",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.2",
 		"ioredis": "^5.2.3",
 		"markdown-table": "^3.0.2",
 		"npm": "^8.19.2",
-		"postgres": "^3.2.4",
+		"postgres": "^3.3.0",
 		"reflect-metadata": "^0.1.13",
 		"string-strip-html": "^11.6.9",
 		"undici": "^5.10.0",
