--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "pr-434",
 		"@skyra/env-utilities": "^1.0.2",
+		"@skyra/start-banner": "^1.0.2",
 		"bufferutil": "^4.0.6",
 		"bullmq": "^2.1.3",
 		"clashofclans.js": "3.0.0-dev.392ca4c",
