chore: remove useless env

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,5 @@
 		"project": "./tsconfig.eslint.json"
 	},
 	"ignorePatterns": ["./dist/*"],
-	"extends": ["snail/common", "snail/node", "snail/typescript", "snail/prettier"],
-	"env": {
-		"jest": true
-	}
+	"extends": ["snail/common", "snail/node", "snail/typescript", "snail/prettier"]
 }
