--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "prettier --write . && eslint src --ext ts --fix",
+		"format": "prettier --write . && eslint src --ext ts --fix --format=pretty",
 		"postinstall": "husky install .github/husky",
-		"lint": "prettier --check . && eslint src --ext ts",
+		"lint": "prettier --check . && eslint src --ext ts --format=pretty",
 		"release": "cliff-jumper",
 		"release:test": "cliff-jumper --dry-run",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -92,6 +92,7 @@
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.25.0",
 		"eslint-config-snail": "^1.3.0",
+		"eslint-formatter-pretty": "^4.1.0",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
