--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.16.0",
 		"@discordjs/rest": "^1.3.0",
+		"@ltd/j-toml": "^1.35.2",
 		"@sapphire/cron": "^1.0.0",
 		"@sapphire/decorators": "^5.0.0",
 		"@sapphire/discord.js-utilities": "^5.1.1",
@@ -59,6 +60,7 @@
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.11.0",
 		"@skyra/env-utilities": "^1.1.0",
+		"@skyra/jaro-winkler": "^1.1.0",
 		"bufferutil": "^4.0.7",
 		"bullmq": "^2.3.2",
 		"clashofclans.js": "3.0.0-dev.5d2e14a",
