--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"format": "prettier --write . && eslint src --ext ts --fix --format=pretty",
 		"postinstall": "husky install .github/husky",
 		"lint": "prettier --check . && eslint src --ext ts --format=pretty",
+		"migrate": "node scripts/dbMigration.mjs",
+		"migrate:new": "ley new $0 --timestamp --esm",
 		"release": "cliff-jumper",
 		"release:test": "cliff-jumper --dry-run",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -96,6 +98,7 @@
 		"eslint-config-snail": "^1.3.0",
 		"eslint-formatter-pretty": "^4.1.0",
 		"husky": "^8.0.1",
+		"ley": "^0.8.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
