--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
 	"extends": "./tsconfig.base.json",
-	"include": ["src", "scripts", "tsup.config.ts", "index.mjs"]
+	"include": ["migrations", "src", "scripts", "tsup.config.ts", "index.mjs"]
 }
