--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"gradient-string": "^2.0.2",
 		"ioredis": "^5.2.3",
 		"markdown-table": "^3.0.2",
+		"nanoid": "^4.0.0",
 		"postgres": "^3.3.1",
 		"reflect-metadata": "^0.1.13",
 		"string-strip-html": "^11.6.17",
