--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@sapphire/stopwatch": "^1.5.0",
 		"@sapphire/type": "^2.2.6",
 		"@sapphire/utilities": "^3.11.0",
+		"@sentry/node": "^7.20.0",
 		"@skyra/env-utilities": "^1.1.0",
 		"bufferutil": "^4.0.7",
 		"bullmq": "^3.2.0",
