--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.4",
 		"pretty-quick": "^3.1.3",
+		"rome": "^11.0.0",
 		"tsup": "^6.6.3",
 		"typescript": "^4.9.5"
 	},
