--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
 		"project": "./tsconfig.eslint.json"
 	},
 	"ignorePatterns": ["./dist/*"],
-	"extends": ["snail/common", "snail/node", "snail/typescript"],
+	"extends": ["snail/common", "snail/node", "snail/typescript", "snail/prettier"],
 	"rules": {
 		"tsdoc/syntax": 0
 	}
