--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "prettier --write . && eslint src --ext ts --fix --format=pretty",
+		"format": "rome format --write . && rome check src --apply && rome check src --apply-suggested &&  eslint src --ext ts --fix --format=pretty",
 		"postinstall": "husky install .github/husky",
-		"lint": "prettier --check . && eslint src --ext ts --format=pretty",
+		"lint": "rome format . && rome check src && eslint src --ext ts --format=pretty",
 		"migrate": "node scripts/dbMigration.mjs",
 		"migrate:new": "ley new $0 --timestamp --esm",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -34,7 +34,8 @@
 	},
 	"lint-staged": {
 		"*.{mjs,js,ts}": [
-			"prettier --write --loglevel=warn \"src/**/*.ts\"",
+			"rome format --write \"src/**/*.ts\"",
+			"rome check src",
 			"eslint --fix --ext mjs,js,ts"
 		]
 	},
@@ -84,7 +85,6 @@
 	"devDependencies": {
 		"@commitlint/cli": "^17.4.4",
 		"@commitlint/config-conventional": "^17.4.4",
-		"@sapphire/prettier-config": "^1.4.5",
 		"@sapphire/ts-config": "^3.3.4",
 		"@swc/core": "^1.3.37",
 		"@types/figlet": "^1.5.5",
@@ -99,8 +99,7 @@
 		"husky": "^8.0.3",
 		"ley": "^0.8.1",
 		"lint-staged": "^13.1.2",
-		"prettier": "^2.8.4",
-		"pretty-quick": "^3.1.3",
+		"rome": "^11.0.0",
 		"tsup": "^6.6.3",
 		"typescript": "^4.9.5"
 	},
