--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"@sapphire/plugin-logger": "3.0.1",
 		"@sapphire/plugin-scheduled-tasks": "6.0.0",
 		"@sapphire/plugin-subcommands": "4.0.0",
+		"@sapphire/result": "^2.6.0",
 		"@sapphire/stopwatch": "^1.5.0",
 		"@sapphire/type": "^2.3.0",
 		"@sapphire/utilities": "^3.11.0",
