--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"@sapphire/decorators": "^6.0.0",
 		"@sapphire/discord.js-utilities": "^6.0.3",
 		"@sapphire/framework": "4.2.1",
-		"@sapphire/plugin-logger": "3.0.1",
-		"@sapphire/plugin-scheduled-tasks": "6.0.0",
+		"@sapphire/plugin-logger": "^3.0.1",
+		"@sapphire/plugin-scheduled-tasks": "^6.0.0",
 		"@sapphire/plugin-subcommands": "4.0.0",
 		"@sapphire/result": "^2.6.0",
 		"@sapphire/stopwatch": "^1.5.0",
@@ -66,7 +66,7 @@
 		"@skyra/env-utilities": "^1.1.0",
 		"bufferutil": "^4.0.7",
 		"bullmq": "^3.10.1",
-		"clashofclans.js": "3.0.2",
+		"clashofclans.js": "^3.0.2",
 		"colorette": "^2.0.19",
 		"discord-api-types": "^0.37.35",
 		"discord.js": "^14.7.1",
