--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -8,7 +8,6 @@ on:
       - 'src/**'
       - 'Dockerfile'
       - '.github/workflows/continuous-delivery.yml'
-      - '.github/workflows/continuous-deployment.yml'
   workflow_dispatch:
 
 jobs:
@@ -37,3 +36,9 @@ jobs:
           file: Dockerfile
           push: true
           tags: ghcr.io/r-priyam/goblin:latest
+      
+      - name: Trigger CircleCI
+        id: trigger-circle-ci
+        uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.0
+        env:
+          CCI_TOKEN: ${{ secrets.CCI_TOKEN }}
