--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -37,8 +37,8 @@ jobs:
           push: true
           tags: ghcr.io/r-priyam/goblin:latest
       
-      - name: Trigger CircleCI
-        id: trigger-circle-ci
-        uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.0
-        env:
-          CCI_TOKEN: ${{ secrets.CCI_TOKEN }}
+      # - name: Trigger CircleCI
+      #   id: trigger-circle-ci
+      #   uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.0
+      #   env:
+      #     CCI_TOKEN: ${{ secrets.CCI_TOKEN }}
