--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
 		"lib": ["ESNext"],
 		"target": "ESNext",
 		"module": "ESNext",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"ignoreDeprecations": "5.0"
 	}
 }
