--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "rome format --write . && rome check src --apply && rome check src --apply-suggested &&  eslint src --ext ts --fix --format=pretty",
+		"format": "prettier --write . && eslint src --ext ts --fix --format=pretty",
 		"postinstall": "husky install .github/husky",
-		"lint": "rome format . && rome check src && eslint src --ext ts --format=pretty",
+		"lint": "prettier --check . && eslint src --ext ts --format=pretty",
 		"migrate": "node scripts/dbMigration.mjs",
 		"migrate:new": "ley new $0 --timestamp --esm",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -34,8 +34,7 @@
 	},
 	"lint-staged": {
 		"*.{mjs,js,ts}": [
-			"rome format --write \"src/**/*.ts\"",
-			"rome check src",
+			"prettier --write --loglevel=warn \"src/**/*.ts\"",
 			"eslint --fix --ext mjs,js,ts"
 		]
 	},
@@ -49,59 +48,63 @@
 	},
 	"dependencies": {
 		"@ltd/j-toml": "^1.38.0",
-		"@napi-rs/canvas": "^0.1.39",
-		"@sapphire/cron": "^1.1.0",
-		"@sapphire/decorators": "^6.0.0",
-		"@sapphire/discord.js-utilities": "^6.0.4",
-		"@sapphire/framework": "4.2.2",
-		"@sapphire/plugin-logger": "^3.0.2",
-		"@sapphire/plugin-scheduled-tasks": "^6.0.0",
-		"@sapphire/plugin-subcommands": "4.0.0",
-		"@sapphire/result": "^2.6.0",
+		"@napi-rs/canvas": "^0.1.44",
+		"@sapphire/cron": "^1.1.1",
+		"@sapphire/decorators": "^6.0.2",
+		"@sapphire/discord.js-utilities": "^7.0.2",
+		"@sapphire/framework": "4.7.1",
+		"@sapphire/plugin-logger": "^3.0.6",
+		"@sapphire/plugin-scheduled-tasks": "^7.1.2",
+		"@sapphire/plugin-subcommands": "4.2.2",
+		"@sapphire/result": "^2.6.4",
 		"@sapphire/stopwatch": "^1.5.0",
-		"@sapphire/type": "^2.3.0",
-		"@sapphire/utilities": "^3.11.0",
-		"@sentry/node": "^7.47.0",
-		"@skyra/env-utilities": "^1.1.0",
-		"bufferutil": "^4.0.7",
-		"bullmq": "^4.1.0",
-		"clashofclans.js": "^3.0.2",
-		"colorette": "^2.0.19",
-		"discord-api-types": "^0.37.37",
-		"discord.js": "^14.9.0",
+		"@sapphire/type": "^2.4.0",
+		"@sapphire/utilities": "^3.13.0",
+		"@sentry/node": "^7.74.1",
+		"@skyra/env-utilities": "^1.2.1",
+		"bufferutil": "^4.0.8",
+		"bullmq": "^4.12.5",
+		"clashofclans.js": "^3.1.2",
+		"colorette": "^2.0.20",
+		"discord-api-types": "^0.37.60",
+		"discord.js": "^14.13.0",
 		"figlet": "^1.6.0",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.2",
-		"ioredis": "^5.3.1",
+		"ioredis": "^5.3.2",
 		"markdown-table": "^3.0.3",
-		"nanoid": "^4.0.2",
-		"postgres": "^3.3.4",
+		"nanoid": "^5.0.2",
+		"postgres": "^3.4.0",
 		"reflect-metadata": "^0.1.13",
-		"string-strip-html": "^13.2.1",
-		"undici": "^5.21.2",
+		"string-strip-html": "^13.4.3",
+		"undici": "^5.26.4",
 		"utf-8-validate": "^6.0.3",
 		"zlib-sync": "^0.1.8"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.5.1",
-		"@commitlint/config-conventional": "^17.4.4",
-		"@sapphire/ts-config": "^4.0.0",
-		"@swc/core": "^1.3.46",
-		"@types/figlet": "^1.5.5",
-		"@types/gradient-string": "^1.1.2",
-		"@types/node": "^18.15.11",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
+		"@commitlint/cli": "^18.0.0",
+		"@commitlint/config-conventional": "^18.0.0",
+		"@sapphire/prettier-config": "^2.0.0",
+		"@sapphire/ts-config": "^5.0.0",
+		"@swc/core": "^1.3.93",
+		"@types/figlet": "^1.5.7",
+		"@types/gradient-string": "^1.1.4",
+		"@types/node": "^20.8.7",
+		"@types/pretty-quick": "^3",
+		"@typescript-eslint/eslint-plugin": "^6.8.0",
+		"@typescript-eslint/parser": "^6.8.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.38.0",
+		"eslint": "^8.52.0",
 		"eslint-config-snail": "^1.6.0",
 		"eslint-formatter-pretty": "^5.0.0",
 		"husky": "^8.0.3",
 		"ley": "^0.8.1",
-		"lint-staged": "^13.2.1",
-		"rome": "^11.0.0",
-		"tsup": "^7.0.0",
-		"typescript": "^5.0.4"
+		"lint-staged": "^15.0.2",
+		"prettier": "^3.0.3",
+		"pretty-quick": "^3.1.3",
+		"rome": "^12.1.3",
+		"tsup": "^7.2.0",
+		"typescript": "^5.2.2"
 	},
 	"packageManager": "yarn@3.5.0",
 	"engines": {
