--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,10 +1,13 @@
 {
-	"extends": "@sapphire/ts-config/extra-strict",
+	"extends": [
+		"@sapphire/ts-config",
+		"@sapphire/ts-config/extra-strict",
+		"@sapphire/ts-config/bundler",
+		"@sapphire/ts-config/verbatim",
+		"@sapphire/ts-config/decorators"
+	],
 	"compilerOptions": {
-		"lib": ["ESNext"],
-		"target": "ESNext",
-		"module": "ESNext",
-		"skipLibCheck": true,
-		"ignoreDeprecations": "5.0"
+		"incremental": false,
+		"noEmit": true
 	}
 }
