--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -1,5 +1,10 @@
 version = 1
 
+[merge]
+require_automerge_label = false
+blocking_labels = ['blocked', 'in review']
+method = 'squash'
+
 [merge.automerge_dependencies]
 versions = ["minor", "patch"]
 usernames = ["dependabot", "renovate"]
