chore: enable auto merge for dep PRs

--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -8,3 +8,7 @@ method = 'squash'
 [merge.automerge_dependencies]
 versions = ["minor", "patch"]
 usernames = ["dependabot", "renovate"]
+
+[approve]
+auto_approve_usernames = ["dependabot", "renovate"]
+auto_approve_labels = ["dependencies"]
