--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,32 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["github>sapphiredev/readme:sapphire-renovate"]
+	"extends": ["config:recommended", "group:allNonMajor"],
+	"labels": ["dependencies"],
+	"semanticCommits": "enabled",
+	"lockFileMaintenance": {
+		"enabled": true,
+		"schedule": ["before 1pm every sunday"]
+	},
+	"npm": {
+		"postUpdateOptions": ["yarnDedupeHighest"],
+		"rangeStrategy": "bump",
+		"packageRules": [
+			{
+				"matchUpdateTypes": ["patch"],
+				"matchCurrentVersion": "/^0\\./",
+				"automerge": false,
+				"platformAutomerge": true
+			},
+			{
+				"matchUpdateTypes": ["minor", "patch"],
+				"matchCurrentVersion": ">=1.0.0",
+				"automerge": false,
+				"platformAutomerge": true
+			},
+			{
+				"matchDepTypes": ["engines"],
+				"enabled": false
+			}
+		]
+	}
 }
