--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 	"scripts": {
 		"build": "tsup",
 		"dev": "tsup --watch --onSuccess \"yarn start\"",
-		"format": "prettier --write . && eslint src --ext ts --fix --format=pretty",
-		"lint": "prettier --check . && eslint src --ext ts --format=pretty",
+		"format": "prettier --write . && eslint src --fix",
+		"lint": "prettier --check . && eslint src",
 		"migrate": "node scripts/dbMigration.mjs",
 		"migrate:new": "ley new $0 --timestamp --esm",
 		"start": "node --enable-source-maps dist/goblin.js",
@@ -34,7 +34,7 @@
 	"lint-staged": {
 		"*.{mjs,js,ts}": [
 			"prettier --write --loglevel=warn \"src/**/*.ts\"",
-			"eslint --fix --ext mjs,js,ts"
+			"eslint src --fix"
 		]
 	},
 	"config": {
@@ -47,59 +47,59 @@
 	},
 	"dependencies": {
 		"@ltd/j-toml": "^1.38.0",
-		"@napi-rs/canvas": "^0.1.52",
-		"@sapphire/cron": "^1.1.3",
-		"@sapphire/decorators": "^6.1.0",
-		"@sapphire/discord.js-utilities": "^7.2.1",
-		"@sapphire/framework": "5.2.1",
+		"@napi-rs/canvas": "^0.1.63",
+		"@sapphire/cron": "^1.2.1",
+		"@sapphire/decorators": "^6.1.1",
+		"@sapphire/discord.js-utilities": "^7.3.1",
+		"@sapphire/framework": "5.3.1",
 		"@sapphire/plugin-logger": "^4.0.2",
-		"@sapphire/plugin-scheduled-tasks": "^10.0.1",
-		"@sapphire/plugin-subcommands": "6.0.3",
-		"@sapphire/result": "^2.6.6",
-		"@sapphire/stopwatch": "^1.5.2",
-		"@sapphire/type": "^2.4.4",
-		"@sapphire/utilities": "^3.16.2",
-		"@sentry/node": "7.116.0",
+		"@sapphire/plugin-scheduled-tasks": "^10.0.2",
+		"@sapphire/plugin-subcommands": "7.0.1",
+		"@sapphire/result": "^2.7.2",
+		"@sapphire/stopwatch": "^1.5.4",
+		"@sapphire/type": "^2.5.1",
+		"@sapphire/utilities": "^3.18.1",
+		"@sentry/node": "8.40.0",
 		"@skyra/env-utilities": "^1.3.0",
 		"bufferutil": "^4.0.8",
-		"bullmq": "^5.7.12",
-		"clashofclans.js": "^3.3.10",
+		"bullmq": "^5.29.1",
+		"clashofclans.js": "^3.3.16",
 		"colorette": "^2.0.20",
-		"discord-api-types": "^0.37.85",
-		"discord.js": "^14.15.2",
-		"figlet": "^1.7.0",
+		"discord-api-types": "^0.37.107",
+		"discord.js": "^14.16.3",
+		"figlet": "^1.8.0",
 		"fuse.js": "^7.0.0",
-		"gradient-string": "^2.0.2",
+		"gradient-string": "^3.0.0",
 		"ioredis": "^5.4.1",
-		"markdown-table": "^3.0.3",
-		"nanoid": "^5.0.7",
-		"postgres": "^3.4.4",
+		"markdown-table": "^3.0.4",
+		"nanoid": "^5.0.8",
+		"postgres": "^3.4.5",
 		"reflect-metadata": "^0.2.2",
 		"string-strip-html": "^13.4.8",
-		"undici": "^6.18.1",
-		"utf-8-validate": "^6.0.4",
+		"undici": "^6.21.0",
+		"utf-8-validate": "^6.0.5",
 		"zlib-sync": "^0.1.9"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
+		"@commitlint/cli": "^19.6.0",
+		"@commitlint/config-conventional": "^19.6.0",
 		"@sapphire/prettier-config": "^2.0.0",
 		"@sapphire/ts-config": "^5.0.1",
-		"@swc/core": "^1.5.7",
-		"@types/figlet": "^1.5.8",
+		"@swc/core": "^1.9.3",
+		"@types/figlet": "^1.7.0",
 		"@types/gradient-string": "^1.1.6",
-		"@types/node": "^20.12.12",
-		"@typescript-eslint/eslint-plugin": "^7.10.0",
-		"@typescript-eslint/parser": "^7.10.0",
+		"@types/node": "^22.9.3",
+		"@typescript-eslint/eslint-plugin": "^8.15.0",
+		"@typescript-eslint/parser": "^8.15.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.57.0",
-		"eslint-config-snail": "^2.0.0",
-		"eslint-formatter-pretty": "^5.0.0",
+		"eslint": "^9.15.0",
+		"eslint-config-neon": "^0.2.3",
+		"eslint-formatter-pretty": "^6.0.1",
 		"ley": "^0.8.1",
-		"lint-staged": "^15.2.5",
-		"prettier": "^3.2.5",
-		"tsup": "^8.0.2",
-		"typescript": "^5.4.5"
+		"lint-staged": "^15.2.10",
+		"prettier": "^3.3.3",
+		"tsup": "^8.3.5",
+		"typescript": "^5.7.2"
 	},
 	"packageManager": "yarn@4.2.2",
 	"engines": {
